--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  /* Colors */
+  --black: #060606;
+  --white: #f2f2f2;
+  --dark-red: #730d1f;
+  --red: #d93644;
+  --pink: #f24b6a;
+  --slate: #8c7d77;
+  --blue: #54b3d6;
+
+  /* Sizes */
+
+  /* Components */
+  --nav-height: 6rem;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  color: var(--black);
+  background-color: var(--white);
+}
+
+a {
+  background-image: linear-gradient(to right, var(--pink), var(--pink) 50%, #000 50%);
+  background-size: 200% 100%;
+  background-position: -100%;
+  background-clip: text;
+  font-weight: bold;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover {
+  background-position: 0;
+}
