--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-nav></app-nav>
 <h1>Welcome to my app!</h1>
 <p>This is a simple template for the app component.</p>
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
