--- a/src/styles.css
+++ b/src/styles.css
@@ -13,12 +13,13 @@
   /* Sizes */
 
   /* Components */
-  --nav-height: 6rem;
+  --nav-height: 4rem;
+  --footer-height: 10rem;
 }
 
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
 }
 body {
   margin: 0;
