--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -1,2 +1,64 @@
-
-<p>home works!</p>
+<app-page [isFirst]="true">
+  <div class="basic-info">
+    <div class="image-container">
+      <img src="assets/images/home-1.jpg" />
+    </div>
+    <div class="content-container">
+      <article>
+        <h2>Hello on Helping Hands Hub!</h2>
+        <p>
+          We are a service dedicated to the optimal selection of volunteers for
+          elderly individuals in need of support. Our mission is to build a
+          bridge between the willing heart and the needing hand. Help Hands Hub
+          is the place where solidarity meets commitment, creating a community
+          ready to bring relief to those who need it most.
+        </p>
+      </article>
+    </div>
+  </div>
+</app-page>
+<app-page>
+  <h2>How does it work?</h2>
+  <div class="basic-info">
+    <div class="content-container">
+      <ol>
+        <li>
+          <b>Register:</b> Join the Help Hands Hub community by completing a
+          short form and describing your skills and availability.
+        </li>
+        <li>
+          <b>Matching:</b> Our intelligent system will match you with a senior
+          whose needs align with your capabilities. You can also browse
+          available tasks and choose the ones that interest you the most.
+        </li>
+        <li>
+          <b>Joint Action:</b> Together with other volunteers, you contribute to
+          the power of good, helping seniors with daily tasks and adding joy to
+          their lives.
+        </li>
+      </ol>
+      <button>Try it by yourself</button>
+    </div>
+    <div class="parallax-container">
+      <div class="parallax-item"></div>
+      <mat-icon class="parallax-icon">person_add</mat-icon>
+      <div class="parallax-item"></div>
+    </div>
+  </div>
+</app-page>
+<app-page>
+  <div class="content-center">
+    <h2>They trust us:</h2>
+    <div class="people-cards">
+      <mat-card>
+        <mat-card-header>John Travolta</mat-card-header>
+        <mat-card-content>Simple card</mat-card-content></mat-card>
+      <mat-card><mat-card-content>Simple card</mat-card-content></mat-card>
+      <mat-card><mat-card-content>Simple card</mat-card-content></mat-card>
+    </div>
+  </div>
+  <div class="content-center">
+    <h2>We collaborate with:</h2>
+    <div></div>
+  </div>
+</app-page>
