--- a/src/styles.css
+++ b/src/styles.css
@@ -25,15 +25,25 @@ html,
 body {
   min-height: 100vh;
 }
+
 body {
+  font-family: "Poppins", "Helvetica Neue", sans-serif;
   margin: 0;
-  font-family: Poppins, "Helvetica Neue", sans-serif;
   color: var(--black);
   background-color: var(--white);
 }
 
+p, h1, h2, h3, h4, h5, h6, a, button {
+  font-family: inherit;
+}
+
 a {
-  background-image: linear-gradient(to right, var(--pink), var(--pink) 50%, #000 50%);
+  background-image: linear-gradient(
+    to right,
+    var(--pink),
+    var(--pink) 50%,
+    #000 50%
+  );
   background-size: 200% 100%;
   background-position: -100%;
   background-clip: text;
