--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <app-logo></app-logo>
+  <a class="logo-link" href="/"><app-logo></app-logo></a>
   <div class="nav-menu">
     <mat-list class="nav-list">
       <li class="nav-list-item" *ngFor="let item of navItems">
