create profile page

--- a/src/components/person-card/person-card.component.html
+++ b/src/components/person-card/person-card.component.html
@@ -1,4 +1,4 @@
-<a href="/person/{{ cardData.id }}" class="card-link">
+<a href="/profile/{{ cardData.id }}" class="card-link">
   <mat-card class="card">
     <img mat-card-image src="{{ cardData.image }}" />
     <mat-card-header class="card-header">
