add fetching data from server

--- a/src/components/filters/filters.component.html
+++ b/src/components/filters/filters.component.html
@@ -5,14 +5,14 @@
     </mat-form-field>
     <button mat-raised-button (click)="onClick($event)">Search</button>
     <div class="slider-div">
-      <mat-label>Distance</mat-label>
+      <mat-label>Max Distance</mat-label>
       <mat-slider discrete [displayWith]="formatKm" min="0" max="50">
         <input formControlName="distanceInput" matSliderThumb/>
       </mat-slider>
     </div>
     <div class="slider-div">
       <mat-label>Age</mat-label>
-      <mat-slider discrete min="50" max="110">
+      <mat-slider discrete min="20" max="110">
         <input formControlName="minAgeInput" matSliderStartThumb />
         <input formControlName="maxAgeInput" matSliderEndThumb />
       </mat-slider>
@@ -21,16 +21,16 @@
       <mat-label>Hobby</mat-label>
       <mat-select formControlName="hobbyInput" multiple>
         @for (variant of hobbyVariants; track filtersForm) {
-        <mat-option [value]="variant">{{ variant }}</mat-option>
+        <mat-option [value]="variant">{{ variant | titlecase }}</mat-option>
         }
       </mat-select>
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Language</mat-label>
+      <mat-label>Assistance</mat-label>
       <mat-select formControlName="languageInput" multiple>
-        @for (lang of languageVariants; track filtersForm) {
-        <mat-option [value]="lang">{{ lang }}</mat-option>
+        @for (assistance of assistanceVariants; track filtersForm) {
+        <mat-option [value]="assistance">{{ assistance | titlecase }}</mat-option>
         }
       </mat-select>
     </mat-form-field>
