--- a/src/views/about/about.component.html
+++ b/src/views/about/about.component.html
@@ -1,1 +1,72 @@
-<p>about works!</p>
+<app-page [isFirst]="true" [title]="'About Helping Hands Hub'">
+  <div>
+    <h3>About Help Hands Hub: Empowering Connections for a Caring Community</h3>
+    <p>
+      Welcome to Help Hands Hub, where compassion meets action to create a
+      thriving community dedicated to supporting our seniors. Our project is
+      born out of a deep commitment to bridge the gap between those with a
+      genuine desire to help and the elderly individuals who could benefit from
+      a helping hand.
+    </p>
+
+    <h3>Our Mission:</h3>
+    <p>
+      At the core of Help Hands Hub lies a mission to foster meaningful
+      connections and support systems for seniors in need. We believe that every
+      person, regardless of age, deserves to live a fulfilling and dignified
+      life. Our project aims to empower volunteers to make a positive impact on
+      the lives of seniors, enhancing their overall well-being.
+    </p>
+
+    <h3>Efficient Volunteer Matching:</h3>
+    <p>
+      Help Hands Hub utilizes cutting-edge technology to streamline the
+      volunteer matching process. Our advanced algorithms take into account the
+      unique skills, interests, and availability of volunteers, ensuring a
+      perfect alignment with the specific needs of seniors. This approach
+      maximizes the effectiveness of each volunteer's contribution, creating a
+      symbiotic relationship that goes beyond simple assistance.
+    </p>
+
+    <h3>Safety and Trustworthiness:</h3>
+    <p>
+      We understand the importance of safety, especially when it comes to
+      vulnerable populations. Help Hands Hub implements a rigorous verification
+      process for all volunteers to guarantee the well-being of the seniors they
+      assist. This commitment to security builds a foundation of trust within
+      our community, creating an environment where seniors and volunteers can
+      engage with confidence.
+    </p>
+
+    <h3>Comprehensive Support:</h3>
+    <p>
+      Help Hands Hub goes beyond traditional assistance by addressing the
+      holistic needs of seniors. From practical support with daily tasks to
+      organizing community events, workshops, and gatherings, we strive to
+      create a comprehensive network that caters to both the physical and
+      emotional well-being of seniors. Our commitment to comprehensive support
+      reflects our belief in the importance of fostering a sense of community
+      and connection.
+    </p>
+
+    <h3>Building a Community:</h3>
+    <p>
+      Help Hands Hub is more than just a platform; it's a community-driven
+      initiative that thrives on collaboration and shared values. We encourage
+      volunteers to actively engage with one another, sharing experiences,
+      insights, and resources. Through organized events, we aim to strengthen
+      the bonds within our community, creating a supportive network that
+      transcends the boundaries of online interactions.
+    </p>
+
+    <h3>Join Us in Making a Difference:</h3>
+    <p>
+      Whether you're a passionate volunteer looking to lend a helping hand or a
+      senior seeking support, Help Hands Hub welcomes you to be part of our
+      growing community. Together, let's embark on a journey of compassion,
+      connection, and positive change. Join Help Hands Hub and become a vital
+      part of a caring community that strives to make a lasting impact on the
+      lives of our seniors.
+    </p>
+  </div>
+</app-page>
