--- a/src/views/join/join.component.html
+++ b/src/views/join/join.component.html
@@ -1,1 +1,97 @@
-<p>join works!</p>
+<app-page [isFirst]="true" [title]="'Join us!'">
+  <div class="join-container">
+    <div>
+      <h3>Join Help Hands Hub: Be the Difference in Someone's Life</h3>
+      <p>
+        Are you ready to make a meaningful impact in your community? Join Help
+        Hands Hub and become a vital part of a compassionate network dedicated
+        to supporting seniors in need. Whether you're a passionate volunteer or
+        a senior seeking assistance, your involvement can create a positive
+        ripple effect that transforms lives.
+      </p>
+    </div>
+    <div>
+      <h3>How to join us?</h3>
+      <mat-tab-group>
+        <mat-tab label="For Volunteers">
+          <ol>
+            <li>
+              <h4>Register with Ease:</h4>
+              <p>
+                Joining Help Hands Hub as a volunteer is a straightforward
+                process. Complete a brief registration form, sharing information
+                about your skills, interests, and availability. Your journey to
+                making a difference starts with a few simple clicks.
+              </p>
+            </li>
+            <li>
+              <h4>Experience Tailored Matching:</h4>
+              <p>
+                Our advanced algorithms take the guesswork out of volunteering.
+                Enjoy the benefits of a streamlined matching system that
+                connects you with seniors whose needs align with your unique
+                abilities and schedule. Maximize the impact of your efforts
+                through personalized connections.
+              </p>
+            </li>
+            <li>
+              <h4>Community Engagement:</h4>
+              <p>
+                Help Hands Hub is more than just a platform; it's a vibrant
+                community of like-minded individuals dedicated to making a
+                positive change. Engage with fellow volunteers, share
+                experiences, and participate in community events, workshops, and
+                gatherings. Together, we create a supportive network that
+                enhances your volunteering experience.
+              </p>
+            </li>
+          </ol>
+        </mat-tab>
+        <mat-tab label="For Seniors">
+          <ol>
+            <li>
+              <h4>Sign Up for Support:</h4>
+              <p>
+                Seniors, take the first step towards receiving the assistance
+                you need. Sign up with Help Hands Hub to access a pool of
+                dedicated volunteers ready to lend a helping hand. Our platform
+                is designed to cater to your specific requirements, ensuring you
+                receive the support that matters most.
+              </p>
+            </li>
+            <li>
+              <h4>Personalized Assistance:</h4>
+              <p>
+                Experience the benefits of personalized assistance tailored to
+                your unique needs. Our matching system connects you with
+                volunteers whose skills and availability align with your
+                requirements, providing a reliable and caring support system.
+              </p>
+            </li>
+            <li>
+              <h4>Embrace Community Connections:</h4>
+              <p>
+                Beyond practical assistance, Help Hands Hub promotes social
+                connections and community engagement. Participate in events
+                designed to foster a sense of belonging and camaraderie.
+                Rediscover the joy of social interactions and build lasting
+                connections within our caring community.
+              </p>
+            </li>
+          </ol>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+    <div>
+      <h3>Join Today and Make a Difference:</h3>
+      <p>
+        Whether you're eager to volunteer or in need of support, Help Hands Hub
+        invites you to join our community-driven initiative. Embrace the
+        opportunity to be the difference in someone's life. Register now, and
+        let's embark on a journey of compassion, connection, and positive change
+        together. Join Help Hands Hub and make a lasting impact in the lives of
+        seniors and volunteers alike.
+      </p>
+    </div>
+  </div>
+</app-page>
