--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -37,7 +37,7 @@
           their lives.
         </li>
       </ol>
-      <button>Try it by yourself</button>
+      <a href="/match" class="unset-link"><button>Try it by yourself</button></a>
     </div>
     <div class="parallax-item"></div>
   </div>
