improve lighthouse score

--- a/src/components/card/card.component.html
+++ b/src/components/card/card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <img mat-card-image src="{{ cardData.image }}" />
+  <img mat-card-image src="{{ cardData.image }}" alt="{{cardData.name}} photo"/>
   <mat-card-title class="card-title">{{ cardData.name }}</mat-card-title>
   <mat-card-content>{{ cardData.description }}</mat-card-content>
 </mat-card>
