--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -1,7 +1,7 @@
 <app-page [isFirst]="true">
   <div class="basic-info">
     <div class="image-container">
-      <img src="assets/images/home-1.jpg" />
+      <img src="assets/images/home-1.jpg" alt="Volunteers image" />
     </div>
     <div class="content-container">
       <article>
@@ -37,7 +37,9 @@
           their lives.
         </li>
       </ol>
-      <a href="/match" class="unset-link"><button>Try it by yourself</button></a>
+      <a href="/match" class="unset-link"
+        ><button>Try it by yourself</button></a
+      >
     </div>
     <div class="parallax-item"></div>
   </div>
@@ -55,11 +57,11 @@
   <div class="content-center margin-top">
     <h2>We collaborate with:</h2>
     <div class="logo-container">
-      <img src="assets/logos/sony-logo.png" />
-      <img src="assets/logos/rover-logo.png" />
-      <img src="assets/logos/amazon-logo.png" />
-      <img src="assets/logos/asus-logo.png" />
-      <img src="assets/logos/nike-logo.png" />
+      <img src="assets/logos/sony-logo.png" alt="Sony logo" />
+      <img src="assets/logos/rover-logo.png" alt="Rover logo" />
+      <img src="assets/logos/amazon-logo.png" alt="Amazon logo" />
+      <img src="assets/logos/asus-logo.png" alt="Asus logo" />
+      <img src="assets/logos/nike-logo.png" alt="Nike logo" />
     </div>
   </div>
 </app-page>
